--- a/hi.html
+++ b/hi.html
@@ -6,5 +6,6 @@
       <body>
           <h1>This is the largest headline</h1>
           <h2>Tthis is the smallest headline</h2>
+            <img src="best.jpeg" height="200" width="300">
       </body>
 </html>
